# bitcoin-core-ipc-workshop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bitcoin/: bitcoin.conf
src/: app.rs  block_header.rs  cli.rs  fixtures.rs  ipc.rs  main.rs  mining_job.rs  pow.rs
test/fixtures/: block_1.hex  block_10.hex  block_11.hex  block_12.hex  block_13.hex  block_14.hex  block_15.hex  block_16.hex  block_17.hex  block_18.json  block_2.hex  block_3.hex  block_4.hex  block_5.hex  block_6.hex  block_7.hex  block_8.hex  block_9.hex
