[package]
name = "bitcoin-core-ipc-workshop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", package = "bitcoin", tag = "bitcoin-0.33.0-beta" }
capnp-rpc = "0.25.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["io-util", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
